# stable-coin

./: .gitignore  ReadMe.MD  bun.lockb  package.json  tsconfig.json  uri.json
client/: bun.lockb  next.config.js  next.config.mjs  package.json  tsconfig.json
client/app/: AppProvider.tsx  globals.css  layout.tsx  page.tsx
client/app/admin/: page.tsx
client/app/dashboard/: page.tsx
client/components/: burn-tab.tsx  dashboard-tabs.tsx  deposit-tab.tsx  features-section.tsx  feedback-alert.tsx  footer.tsx  hero-section.tsx  how-it-works.tsx  liquidate-tab.tsx  loading-spinner.tsx  matrix-background.tsx  navbar.tsx  orb-effect.tsx  shader-background.tsx  user-balance-card.tsx
client/contexts/: pythPrice.tsx  user-state-context.tsx
client/lib/: lib.ts
stable_coin/: Anchor.toml  buffer.json
stable_coin/programs/stable_coin/: Cargo.toml
stable_coin/programs/stable_coin/src/: constants.rs  error.rs  lib.rs
stable_coin/programs/stable_coin/src/instructions/: deposit.rs  deposit_mint.rs  init_config.rs  liquidate.rs  mod.rs  shared.rs  withdraw_burn.rs
stable_coin/programs/stable_coin/src/state/: mod.rs
stable_coin/test/: test.tests.ts
stable_coin/test/fixtures/: bankRunContextWrapper.ts
